# TaxRulesAsCode

./: .ahoy.yml  .env  .env.default  .lagoon.yml  DEPLOY.md  Extension of Time Form Questions.md  Extension of Time OpenFisca Flow.mermaid  Negative Gearing OpenFisca Flow.mermaid  Negative Gearing Ruleset.md  Objection Form Questions.md  Objection Rights OpenFisca Flow.mermaid  Objection Rights Ruleset.md  PAYG Form Questions.md  PAYG OpenFisca API Integration Guide.md  PAYG OpenFisca Flow.mermaid  Working Australians Tax Offset OpenFisca Flow.mermaid  Working Australians Tax Offset Ruleset.md  docker-compose.home.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: home.dockerfile  nginx.conf  py.dockerfile
custom/: ahoy.yml
openfisca_rules/: __init__.py  entities.py
openfisca_rules/situation_examples/: __init__.py  payg.json
openfisca_rules/tests/: payg.yaml
openfisca_rules/variables/: extension_of_time.py  objections.py  wato.py
research/: README.md  decision-inventory.md
research/cgt/: README.md  future-changes-2026-27-budget.md  rule-inventory.md
research/eot/: README.md  case-table.md
research/negative_gearing/: README.md
research/wato/: README.md  rule-inventory.md
webapp/: calculator.html  cgt-calculator.html  engine.html  eot.html  explorer.html  flow.html  index.html  maintain.html  model.html  negative-gearing.html  objection-calculator.html  rules.html  ruleset-editor.html  wato.html
webapp/assets/: app.js  cgt.js  eot.js  explorer.js  flow.js  model.js  negative-gearing.js  style.css  (+3 more)
(+50 files in other folders)
